# permuros

./: .pre-commit-config.yaml  README.md  compose.dev.yaml  manage.py  pyproject.toml  requirements.in  requirements.txt  workenv.yaml
docker/django/: Dockerfile  run-dev.sh
docker/postgres/: dump.sh  restore.sh
os/: kiosk-start.sh  kiosk-stop.sh  kiosk.service  kiosk.sh
permuros/: __init__.py  asgi.py  monkey.py  settings.py  urls.py  wsgi.py
permuros/accounts/: admin.py  middleware.py  models.py  views.py
permuros/accounts/migrations/: 0001_initial.py
permuros/bank/: models.py  urls.py  views.py
permuros/bank/migrations/: 0001_initial.py
permuros/bank/static/bank/: app.css
permuros/bank/templates/bank/: transactions.html
permuros/docs/: CHANGELOG.rst
permuros/draw/: admin.py  models.py  urls.py  views.py
permuros/draw/migrations/: 0001_initial.py
permuros/draw/static/draw/: app.css  app.js  print.css  prototype.js
permuros/spotify/: api.py  models.py  urls.py  views.py
permuros/spotify/migrations/: 0001_initial.py
permuros/store/: models.py  view.py
permuros/templates/: base.html
permuros/write/: models.py  urls.py  views.py
permuros/write/migrations/: 0001_initial.py
static/: reset.css  site.css
static/fonts/: fonts.css
templates/: base.html  base_public.html  error.html  home.html  omusic.html
templates/accounts/: index.html
templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
(+19 files in other folders)
